examples/positive/expressions.nv
fn main() : void {
    5 + 3 * 6 % 7 / 2 - 1 == 6;
    !true == false;
    5 >= 4;
    (true && false) == false;
    return;
}
