examples/negative/return_type_mismatch.nv
fn sum(x: int, y: int) : bool {
    return x + y;
}
fn main() : void {
    return;
}
